[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardew-host-swap"
version = "0.1.0"
description = "Swap Stardew Valley multiplayer host and farmhand save data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]
license = {text = "MIT"}
authors = [
  {name = "Huhan Li"}
]

[project.scripts]
stardew-host-swap-gui = "stardew_host_swap.gui:run"
stardew-host-swap = "stardew_host_swap.cli:main"

[tool.setuptools]
packages = ["stardew_host_swap"]
