[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardew-host-swap"
version = "1.1.1"
description = "Swap Stardew Valley multiplayer host and farmhand save data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]
license = {text = "MIT"}
authors = [
  {name = "Huhan Li"}
]

[project.scripts]
stardew-host-swap = "stardew_host_swap.gui:main"

[tool.setuptools]
packages = ["stardew_host_swap"]
